--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 name: Renfe Ticket Monitor
 
 on:
-  # Permite ejecutar este flujo de trabajo manualmente desde la pestaña Actions
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
   schedule:
-    # Ejecuta el script cada 15 minutos.
-    # Puedes cambiarlo. "*/30" sería cada 30 min. "0 * * * *" sería cada hora.
+    # Runs the script every 15 minutes.
+    # Use "*/30 * * * *" for every 30 min, or "0 * * * *" for every hour.
     - cron: '*/15 * * * *'
 
 jobs:
@@ -14,29 +14,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Descarga el código de tu repositorio a la máquina virtual
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Configura el entorno de Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      # 3. Instala las dependencias de Python
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # 4. Ejecuta el script de Renfe
       - name: Run Renfe Scraper
         env:
-          # Pasa los secretos de GitHub como variables de entorno al script
-          EMAIL_REMITENTE: ${{ secrets.EMAIL_REMITENTE }}
-          EMAIL_CONTRASENA_APP: ${{ secrets.EMAIL_CONTRASENA_APP }}
-          EMAIL_DESTINATARIO: ${{ secrets.EMAIL_DESTINATARIO }}
+          # Pass GitHub secrets as environment variables to the script
+          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+          SENDER_APP_PASSWORD: ${{ secrets.SENDER_APP_PASSWORD }}
+          RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
         run: |
-          # El script ya está configurado para ejecutarse en modo headless
+          # The -u flag ensures that prints are shown in real-time (unbuffered)
           python -u renfe_scraper.py
